fix: reduce font-size for trx details to align with header size

--- a/src/app/balance/balance.component.scss
+++ b/src/app/balance/balance.component.scss
@@ -127,7 +127,6 @@
 
 mat-card {
     width: 100%;
-    font-size: 1.1rem;
 }
 
 .mat-expansion-panel-body {
@@ -181,7 +180,7 @@ mat-card {
     color: grey;
 }
 
-.status-icon{
+.status-icon {
     padding-left: 6px;
     padding-right: 2px;
 }
